# bolt2

./: AGENTS.md  CHANGELOG  CLAUDE.md  README.md  flake.nix  ppad-bolt2.cabal
bench/: Main.hs  Weight.hs
lib/Lightning/Protocol/: BOLT2.hs
lib/Lightning/Protocol/BOLT2/: Codec.hs  Messages.hs  Types.hs
plans/: ARCH1.md  IMPL1.md  REVIEW1.md  TODO
test/: Main.hs
