cabal-version:      3.0
name:               ppad-bolt2
version:            0.0.1
synopsis:           Peer protocol per BOLT #2
license:            MIT
license-file:       LICENSE
author:             Jared Tobin
maintainer:         jared@ppad.tech
category:           Cryptography
build-type:         Simple
tested-with:        GHC == 9.10.3
extra-doc-files:    CHANGELOG
description:
  Peer protocol, per
  [BOLT #2](https://github.com/lightning/bolts/blob/master/02-peer-protocol.md).

source-repository head
  type:     git
  location: git.ppad.tech/bolt2.git

library
  default-language: Haskell2010
  hs-source-dirs:   lib
  ghc-options:
      -Wall
  exposed-modules:
      Lightning.Protocol.BOLT2
  build-depends:
      base >= 4.9 && < 5
    , bytestring >= 0.9 && < 0.13
    , deepseq >= 1.4 && < 1.6
    , ppad-bolt1

test-suite bolt2-tests
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  hs-source-dirs:      test
  main-is:             Main.hs

  ghc-options:
    -rtsopts -Wall -O2

  build-depends:
      base
    , bytestring
    , ppad-base16
    , ppad-bolt1
    , ppad-bolt2
    , tasty
    , tasty-hunit
    , tasty-quickcheck

benchmark bolt2-bench
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  hs-source-dirs:      bench
  main-is:             Main.hs

  ghc-options:
    -rtsopts -O2 -Wall -fno-warn-orphans

  build-depends:
      base
    , bytestring
    , criterion
    , deepseq
    , ppad-bolt2

benchmark bolt2-weigh
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  hs-source-dirs:      bench
  main-is:             Weight.hs

  ghc-options:
    -rtsopts -O2 -Wall -fno-warn-orphans

  build-depends:
      base
    , bytestring
    , deepseq
    , ppad-bolt2
    , weigh
